deploy: 213000caf017b79fd8b9054f943b43992734a5c9

--- a/com.kubelt.ddt.cmds.wallet.init.html
+++ b/com.kubelt.ddt.cmds.wallet.init.html
@@ -35,8 +35,8 @@
   {:copyright &quot;©2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
    [com.kubelt.ddt.options :as ddt.options]
-   [com.kubelt.ddt.prompt :as ddt.prompt]
    [com.kubelt.ddt.util :as ddt.util]
+   [com.kubelt.ddt.prompt :as ddt.prompt]
    [com.kubelt.lib.promise :as lib.promise]
    [com.kubelt.lib.wallet :as lib.wallet]))</pre>
 				</td>
@@ -57,29 +57,20 @@
                     app-name (get args-map :app-name)
                     ;; TODO check to see if wallet name is valid (using yargs)
                     wallet-name (get args-map :name)]
-                (lib.promise/promise
-                 (fn [resolve reject]
-                   ;; Check to see if named wallet already exists. Wallets
-                   ;; can't be overwritten so throw an error if so.
-                   (if (lib.wallet/has-wallet? app-name wallet-name)
-                     (let [message (str &quot;error: wallet '&quot; wallet-name &quot;' already exists&quot;)]
-                       (reject message))
-                     ;; Wallet name is not a duplicate, get the password
-                     ;; used to encrypt the wallet.
-                     (ddt.prompt/confirm-password!
-                      (fn [err result]
-                        (when err
-                          ;;(ddt.util/exit-if err)
-                          (reject err))
-                        (let [password (.-password result)]
+                (ddt.prompt/confirm-password!
+                 (fn [err result]
+                   (when err
+                     (ddt.util/exit-if err))
+                   (-&gt; (lib.wallet/init&amp; app-name wallet-name (.-password result))
+                       (lib.promise/then
+                        (fn [wallet]
                           (let [;; TODO return a promise from wallet/init
-                                wallet (lib.wallet/init app-name wallet-name password)
                                 wallet-name (get wallet :wallet/name)
                                 ;; NB: Also available are the mnemonic path, locale.
                                 mnemonic (get wallet :wallet.mnemonic/phrase)]
                             (println &quot;initialized wallet:&quot; wallet-name)
-                            (println &quot;-&gt; mnemonic:&quot; mnemonic)
-                            (resolve))))))))))})</pre>
+                            (println &quot;-&gt; mnemonic:&quot; mnemonic))))
+                       (lib.promise/catch (fn [err] (ddt.util/exit-if err))))))))})</pre>
 				</td>
 			</tr>
 			<tr>
