--- a/com.kubelt.ddt.cmds.sdk.core.authenticate.html
+++ b/com.kubelt.ddt.cmds.sdk.core.authenticate.html
@@ -34,12 +34,9 @@
 					<pre class="brush: clojure">(ns com.kubelt.ddt.cmds.sdk.core.authenticate
   {:copyright &quot;©2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
-   [clojure.string :as cstr])
-  (:require
    [com.kubelt.ddt.options :as ddt.options]
    [com.kubelt.ddt.prompt :as ddt.prompt]
    [com.kubelt.ddt.util :as ddt.util]
-   [com.kubelt.lib.error :as lib.error]
    [com.kubelt.lib.promise :as lib.promise]
    [com.kubelt.lib.wallet :as lib.wallet]
    [com.kubelt.sdk.v1 :as sdk]
@@ -68,7 +65,7 @@
                        app-name (get args-map :app-name)
                        wallet-name (get args-map :wallet)
                        password (.-password result)]
-                   (-&gt; (lib.wallet/load app-name wallet-name password)
+                   (-&gt; (lib.wallet/load&amp; app-name wallet-name password)
                        (lib.promise/then
                         (fn [wallet]
                           (let [;; Transform command line arguments into an SDK options map.
@@ -89,7 +86,8 @@
                                              (prn (ex-data e))))
                                        (lib.promise/finally
                                          (fn []
-                                           (sdk/halt! kbt)))))))))))))))})</pre>
+                                           (sdk/halt! kbt))))))))))
+                       (lib.promise/catch (fn [e] (ddt.util/exit-if e))))))))})</pre>
 				</td>
 			</tr>
 			<tr>
