--- a/com.kubelt.ddt.cmds.wallet.import.html
+++ b/com.kubelt.ddt.cmds.wallet.import.html
@@ -37,6 +37,7 @@
    [com.kubelt.ddt.options :as ddt.options]
    [com.kubelt.ddt.prompt :as ddt.prompt]
    [com.kubelt.ddt.util :as ddt.util]
+   [com.kubelt.lib.promise :as lib.promise]
    [com.kubelt.lib.wallet :as lib.wallet]))</pre>
 				</td>
 			</tr>
@@ -56,27 +57,20 @@
                     app-name (get args-map :app-name)
                     wallet-name (get args-map :name)]
                 ;; TODO check to see if wallet name is valid (using yargs)
-                ;; Check to see if named wallet already exists. Wallets
-                ;; can't be overwritten so throw an error if so.
-                (when (lib.wallet/has-wallet? app-name wallet-name)
-                  (let [message (str &quot;wallet '&quot; wallet-name &quot;' already exists&quot;)]
-                    (ddt.util/exit-if message)))
                 (ddt.prompt/ask-mnemonic!
                  (fn [err result]
+                   (when err (ddt.util/exit-if err))
                    (let [mnemonic (.-mnemonic result)]
                      (ddt.prompt/confirm-password!
                       (fn [err result]
-                        (when err
-                          (ddt.util/exit-if err))
-                        (let [password (.-password result)
-                              result&amp; (lib.wallet/import app-name wallet-name mnemonic password)]
-                          (-&gt; result&amp;
-                              (.then (fn [{:keys [wallet/name wallet/path]}]
-                                       (let [message (str &quot;wallet '&quot; name &quot;' successfully imported&quot;)]
-                                         (println message))))
-                              (.catch (fn [error]
-                                        (let [message (:error error)]
-                                          (println message)))))))))))))})</pre>
+                        (when err (ddt.util/exit-if err))
+                        (let [password (.-password result)]
+                          (-&gt; (lib.wallet/import&amp; app-name wallet-name mnemonic password)
+                              (lib.promise/then
+                               (fn [{:keys [wallet/name]}]
+                                 (let [message (str &quot;wallet '&quot; name &quot;' successfully imported&quot;)]
+                                   (println message))))
+                              (lib.promise/catch (fn [e] (ddt.util/exit-if e))))))))))))})</pre>
 				</td>
 			</tr>
 			<tr>
