--- a/com.kubelt.ddt.cmds.wallet.ls.html
+++ b/com.kubelt.ddt.cmds.wallet.ls.html
@@ -34,13 +34,11 @@
 					<pre class="brush: clojure">(ns com.kubelt.ddt.cmds.wallet.ls
   {:copyright &quot;©2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
-   [&quot;process&quot; :as process])
-  (:require
    [clojure.string :as cstr])
   (:require
    [com.kubelt.ddt.color :as ddt.color]
    [com.kubelt.ddt.options :as ddt.options]
-   [com.kubelt.ddt.prompt :as ddt.prompt]
+   [com.kubelt.ddt.util :as ddt.util]
    [com.kubelt.lib.promise :as lib.promise]
    [com.kubelt.lib.wallet :as lib.wallet]))</pre>
 				</td>
@@ -59,13 +57,15 @@
    :handler (fn [args]
               (let [args-map (ddt.options/to-map args)
                     app-name (get args-map :app-name)]
-                (lib.promise/promise
-                 (fn [resolve reject]
-                   (doseq [wallet-name (lib.wallet/ls app-name)]
-                     (let [arrow (ddt.color/hilite &quot;-&gt;&quot;)
-                           wallet-line (cstr/join &quot; &quot; [arrow wallet-name])]
-                       (println wallet-line)))
-                   (resolve)))))})</pre>
+                (-&gt; (lib.wallet/ls&amp; app-name)
+                    (lib.promise/then
+                     (fn [wallet-names]
+                       (doseq [wallet-name wallet-names]
+                         (let [arrow (ddt.color/hilite &quot;-&gt;&quot;)
+                               wallet-line (cstr/join &quot; &quot; [arrow wallet-name])]
+                           (println wallet-line)))))
+                    (lib.promise/catch
+                     (fn [e] (ddt.util/exit-if e))))))})</pre>
 				</td>
 			</tr>
 			<tr>
