--- a/com.kubelt.ddt.cmds.wallet.sign.html
+++ b/com.kubelt.ddt.cmds.wallet.sign.html
@@ -34,11 +34,6 @@
 					<pre class="brush: clojure">(ns com.kubelt.ddt.cmds.wallet.sign
   {:copyright &quot;©2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
-   [&quot;process&quot; :as process])
-  (:require
-   [cljs.core.async :as async :refer [&lt;!]]
-   [clojure.string :as cstr])
-  (:require
    [com.kubelt.ddt.options :as ddt.options]
    [com.kubelt.ddt.prompt :as ddt.prompt]
    [com.kubelt.ddt.util :as ddt.util]
@@ -65,29 +60,20 @@
                     app-name (get args-map :app-name)
                     wallet (get args-map :wallet)
                     data (get args-map :data)]
-                (lib.promise/promise
-                 (fn [resolve reject]
-                   ;; Check to see if named wallet exists.
-                   (if-not (lib.wallet/has-wallet? app-name wallet)
-                     (let [message (str &quot;error: wallet '&quot; wallet &quot;' doesn't exist&quot;)]
-                       (reject message))
-                     ;; The named wallet exists so load it and extract
-                     ;; the signing function to use on the supplied
-                     ;; data.
-                     (ddt.prompt/ask-password!
-                      (fn [err result]
-                        (if err
-                          (reject err)
-                          (let [password (.-password result)]
-                            (-&gt; (lib.wallet/load app-name wallet password)
-                                (lib.promise/then
-                                 (fn [wallet]
-                                   (let [sign-fn (get wallet :wallet/sign-fn)
-                                         decoded (lib.base64/decode-string data)]
-                                     (-&gt; (sign-fn decoded)
-                                         (.then (fn [signature]
-                                                  (println signature)
-                                                  (resolve)))))))))))))))))})</pre>
+                (ddt.prompt/ask-password!
+                 (fn [err result]
+                   (if err
+                     (ddt.util/exit-if err)
+                     (let [password (.-password result)]
+                       (-&gt; (lib.wallet/load&amp; app-name wallet password)
+                           (lib.promise/then
+                            (fn [wallet]
+                              (let [sign-fn (get wallet :wallet/sign-fn)
+                                    decoded (lib.base64/decode-string data)]
+                                (-&gt; (sign-fn decoded)
+                                    (.then (fn [signature]
+                                             (println signature)))))))
+                           (lib.promise/catch (fn [e] (ddt.util/exit-if e))))))))))})</pre>
 				</td>
 			</tr>
 			<tr>
