--- a/com.kubelt.lib.wallet.node.html
+++ b/com.kubelt.lib.wallet.node.html
@@ -35,18 +35,29 @@
   {:copyright &quot;©2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:refer-clojure :exclude [import])
   (:require
-   [&quot;fs&quot; :as fs]
+   [&quot;fs&quot; :refer [promises] :rename {promises fs-promises} :as fs]
    [&quot;path&quot; :as path])
   (:require
    [&quot;@ethersproject/wallet&quot; :refer [Wallet]])
-  (:require
-   [cljs.core.async :as async :refer [go]]
-   [cljs.core.async.interop :refer-macros [&lt;p!]])
   (:require
    [com.kubelt.lib.error :as lib.error]
    [com.kubelt.lib.path :as lib.path]
    [com.kubelt.lib.promise :as lib.promise]
    [com.kubelt.lib.wallet.shared :as lib.wallet]))</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					<p>Return the file location if exists. Don't throw exception if no exists</p>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure">(defn- fs-exists?&amp;
+  [file]
+  (lib.promise/promise
+   (fn [resolve _]
+     (-&gt; (.access fs-promises file  (.. fs -constants -F_OK))
+         (lib.promise/then (fn [_] (resolve file)))
+         (lib.promise/catch (fn [_] (resolve nil)))))))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -63,19 +74,24 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					<p>Return the wallet directory path for the application as a string, creating it if it doesn't already exist.</p>
+					<p>Return the wallet directory path for the application as a string, creating it if it doesn't already exist. Throws exception if Wallet dir isn't available</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(defn- ensure-wallet-dir
+					<pre class="brush: clojure">(defn- ensure-wallet-dir&amp;
   [app-name]
   (let [wallet-dirp (wallet-dir app-name)]
-    (when-not (.existsSync fs wallet-dirp)
-      (let [mode &quot;0700&quot;
-            recursive? true
-            options #js {:mode mode
-                         :recursive recursive?}]
-        (.mkdirSync fs wallet-dirp options)))
-    wallet-dirp))</pre>
+    (lib.promise/promise
+     (fn [resolve reject]
+       (-&gt; (fs-exists?&amp; wallet-dirp)
+           (lib.promise/then (fn [x]
+                               (when-not x
+                                 (let [mode &quot;0700&quot;
+                                       recursive? true
+                                       options #js {:mode mode
+                                                    :recursive recursive?}]
+                                   (.mkdir fs-promises wallet-dirp options)))))
+           (lib.promise/then (fn [_] (resolve wallet-dirp)))
+           (lib.promise/catch (fn [e] (reject (lib.error/error (str &quot;Wallet dir isn't available&quot; e))))))))))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -109,6 +125,27 @@
 			</tr>
 			<tr>
 				<td class="docs">
+					<p>Return true if the named wallet already exists. Throws exception if wallet doesn't exist with this name</p>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure">(defn ensure-wallet&amp;
+  [app-name wallet-name]
+  (lib.promise/promise
+   (fn [resolve reject]
+     (-&gt; (ensure-wallet-dir&amp; app-name)
+         (lib.promise/then
+          (fn [_]
+            (-&gt; (fs-exists?&amp; (name-&gt;path app-name wallet-name))
+                (lib.promise/then
+                 (fn [x]
+                   (if x
+                     (resolve x)
+                     (reject (lib.error/error (str &quot;no wallet with this name: &quot; wallet-name)))))))))
+         (lib.promise/catch reject)))))</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
 					<h2>Public</h2>TODO allow wallet re-creation from mnemonicTODO allow wallet listingTODO allow wallet deletion
 				</td>
 				<td class="codes">
@@ -117,60 +154,66 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					<p>Return true if the named wallet already exists.</p>
+					<p>Return wallet file path if the named wallet already exists. Returns nil if no wallet exists</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(defn has-wallet?
+					<pre class="brush: clojure">(defn has-wallet?&amp;
   [app-name wallet-name]
-  (let [wallet-path (name-&gt;path app-name wallet-name)]
-    (.existsSync fs wallet-path)))</pre>
+  (fs-exists?&amp; (name-&gt;path app-name wallet-name)))</pre>
 				</td>
 			</tr>
 			<tr>
 				<td class="docs">
-					<p>Return true if the wallet can be successfully decrypted with the supplied password, and false otherwise.</p>
+					<p>Return true if the wallet can be successfully decrypted with the supplied password, and false otherwise. Throws exception if password is incorrect</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(defn can-decrypt?
+					<pre class="brush: clojure">(defn can-decrypt?&amp;
   [app-name wallet-name password]
-  (if (has-wallet? app-name wallet-name)
-    (let [wallet-path (name-&gt;path app-name wallet-name)
-          wallet-str (.readFileSync fs wallet-path)]
-      (try
-        (.fromEncryptedJsonSync Wallet wallet-str password)
-        true
-        (catch js/Error e
-          ;; Error: invalid password
-          false)))
-    false))</pre>
+  (lib.promise/promise
+   (fn [resolve reject]
+     (-&gt; (ensure-wallet&amp; app-name wallet-name)
+         (lib.promise/then
+          (fn [wallet-path]
+            (-&gt;
+             (.readFile fs-promises wallet-path)
+             (lib.promise/then #(.fromEncryptedJson Wallet % password))
+             (lib.promise/then (fn [_] (resolve true)))
+             (lib.promise/catch (fn [_] (reject (lib.error/error (str &quot;password for '&quot; wallet-name &quot;' is incorrect&quot;))))))))
+         (lib.promise/catch reject)))))</pre>
 				</td>
 			</tr>
 			<tr>
 				<td class="docs">
-					<p>Create and store an encrypted wallet. The encrypted wallet file is stored in an XDG compliant location based on the application name. It is also named using the supplied wallet name and encrypted with the supplied password. A map describing the created wallet is returned if successful. An error map is returned otherwise.</p>
+					<p>Create and store an encrypted wallet. The encrypted wallet file is stored in an XDG compliant location based on the application name. It is also named using the supplied wallet name and encrypted with the supplied password. A map describing the created wallet is returned if successful. An error map is returned otherwise. Throws exception on wallet-encryption or fs-write problems</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(defn init
+					<pre class="brush: clojure">(defn init&amp;
   [app-name wallet-name password]
-  (let [;; Create the wallet directory if it doesn't already exist.
-        wallet-dirp (ensure-wallet-dir app-name)]
-    ;; It's an error to initialize an existing wallet.
-    (when (has-wallet? app-name wallet-name)
-      (let [message (str &quot;wallet &quot; wallet-name &quot; already exists&quot;)]
-        (lib.error/error message)))
-    ;; Wallet doesn't yet exist, so create it!
-    (let [wallet-path (.join path wallet-dirp wallet-name)
-          eth-wallet (.createRandom Wallet)
-          mnemonic (.-mnemonic eth-wallet)]
-      (go
-        (let [wallet-js (&lt;p! (.encrypt eth-wallet password))]
-          (.writeFileSync fs wallet-path wallet-js)))
-      (let [{:keys [phrase path locale]} (js-&gt;clj mnemonic :keywordize-keys true)]
-        {:wallet/path wallet-path
-         :wallet/name wallet-name
-         :wallet.mnemonic/phrase phrase
-         :wallet.mnemonic/path path
-         :wallet.mnemonic/locale locale}))))</pre>
+  (lib.promise/promise
+   (fn [resolve reject]
+     (-&gt; (ensure-wallet-dir&amp; app-name)
+         (lib.promise/then
+          (fn [wallet-dirp]
+            (-&gt; (has-wallet?&amp; app-name wallet-name)
+                (lib.promise/then
+                 (fn [file]
+                   (when file
+                     (reject (lib.error/error (str &quot;wallet &quot; wallet-name &quot; already exists&quot;))))
+                   (let [wallet-path (.join path wallet-dirp wallet-name)
+                         eth-wallet (.createRandom Wallet)
+                         mnemonic (.-mnemonic eth-wallet)]
+                     (-&gt; (.encrypt eth-wallet password)
+                         (lib.promise/then #(.writeFile fs-promises wallet-path %))
+                         (lib.promise/then (fn []
+                                             (resolve
+                                              (let [{:keys [phrase path locale]} (js-&gt;clj mnemonic :keywordize-keys true)]
+                                                {:wallet/path            wallet-path
+                                                 :wallet/name            wallet-name
+                                                 :wallet.mnemonic/phrase phrase
+                                                 :wallet.mnemonic/path   path
+                                                 :wallet.mnemonic/locale locale}))))
+                         (lib.promise/catch (fn [e] (reject (lib.error/error e)))))))))))
+         (lib.promise/catch reject)))))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -178,27 +221,27 @@
 					<p>Return a promise that resolves to a wallet map, or that rejects with an error map if a problem occurs.</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(defn load
+					<pre class="brush: clojure">(defn load&amp;
   [app-name wallet-name password]
-  (let [wallet-dirp (ensure-wallet-dir app-name)]
-    (lib.promise/promise
-     (fn [resolve reject]
-       (when-not (has-wallet? app-name wallet-name)
-         (let [message (str &quot;wallet &quot; wallet-name &quot; doesn't exist&quot;)]
-           (reject (lib.error/error message))))
-       ;; Load the wallet JSON
-       (let [wallet-path (name-&gt;path app-name wallet-name)]
-         (.readFile fs wallet-path &quot;utf8&quot;
-          (fn [err wallet-str]
-            (if err
-              (reject (lib.error/error err))
-              (let [eth-wallet (.fromEncryptedJsonSync Wallet wallet-str password)
-                    address (.-address eth-wallet)
-                    sign-fn (lib.wallet/make-sign-fn eth-wallet)]
-                (resolve
-                 {:com.kubelt/type :kubelt.type/wallet
-                  :wallet/address address
-                  :wallet/sign-fn sign-fn}))))))))))</pre>
+  (lib.promise/promise
+   (fn [resolve reject]
+     (-&gt; (ensure-wallet&amp; app-name wallet-name)
+         (lib.promise/then
+          (fn [wallet-path]
+            (-&gt; (.readFile fs-promises wallet-path &quot;utf8&quot;)
+                (lib.promise/then
+                 (fn [wallet-str]
+                   (let [eth-wallet (.fromEncryptedJsonSync Wallet wallet-str password)
+                         address (.-address eth-wallet)
+                         sign-fn (lib.wallet/make-sign-fn eth-wallet)]
+                     (resolve
+                      {:com.kubelt/type :kubelt.type/wallet
+                       :wallet/address address
+                       :wallet/sign-fn sign-fn}))))
+                (lib.promise/catch
+                 (fn [error]
+                   (reject (lib.error/error error)))))))
+         (lib.promise/catch reject)))))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -206,11 +249,13 @@
 					<p>Return a list of wallet names.</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(defn ls
+					<pre class="brush: clojure">(defn ls&amp;
   [app-name]
-  (let [wallet-dirp (ensure-wallet-dir app-name)
-        wallet-files (.readdirSync fs wallet-dirp)]
-    (js-&gt;clj wallet-files)))</pre>
+  (lib.promise/promise
+   (fn [resolve reject]
+     (-&gt; (ensure-wallet-dir&amp; app-name)
+         (lib.promise/then #(resolve (js-&gt;clj (.readdir fs-promises %))))
+         (lib.promise/catch reject)))))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -218,10 +263,10 @@
 					<p>Delete a wallet.</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(defn delete!
+					<pre class="brush: clojure">(defn delete!&amp;
   [app-name wallet-name]
   (let [wallet-path (name-&gt;path app-name wallet-name)]
-    (.unlinkSync fs wallet-path)))</pre>
+    (.unlink fs-promises wallet-path)))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -234,23 +279,19 @@
   :fixme
   ;; (&lt;! (lib.wallet/random-wallet))
   #_(let [sign-fn (lib.wallet/make-sign-fn eth-wallet)]
-    {:wallet/address :fixme
-     :wallet/sign-fn sign-fn}))</pre>
+      {:wallet/address :fixme
+       :wallet/sign-fn sign-fn}))</pre>
 				</td>
 			</tr>
 			<tr>
 				<td class="docs">
-					<p>Import a wallet and store it encrypted. Returns a promise that resolves to the path to the imported wallet, or if an error occurs rejects with a standard error map.</p>
+					<p>Import a wallet and store it encrypted. Returns a promise that resolves to the path to the imported wallet, or if an error occurs rejects with a standard error map. Throws encrypt or fs-wallet exceptions</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(defn import
+					<pre class="brush: clojure">(defn import&amp;
   [app-name wallet-name mnemonic password]
   (lib.promise/promise
    (fn [resolve reject]
-     (when (has-wallet? app-name wallet-name)
-       (let [msg (str &quot;wallet &quot; wallet-name &quot; already exists&quot;)
-             error (lib.error/error msg)]
-         (reject error)))
      ;; The wallet with the given name doesn't yet exist, we can import
      ;; from the mnemonic and create a wallet with that name.
      (letfn [;; Returns a promise that resolves to the wallet
@@ -265,24 +306,21 @@
                      (reject error)))))
              ;; Returns the path of the wallet file to write.
              (wallet-path []
-               (let [wallet-dir (ensure-wallet-dir app-name)
-                     wallet-file (.join path wallet-dir wallet-name)]
-                 (lib.promise/resolved wallet-file)))]
+               (-&gt; (ensure-wallet-dir&amp; app-name)
+                   (lib.promise/then #(.join path % wallet-name))))]
        (let [path&amp; (wallet-path)
              wallet&amp; (from-mnemonic mnemonic)]
-         (-&gt; (lib.promise/all [path&amp; wallet&amp;])
-             (.then (fn [[wallet-dirp wallet-js]]
-                      (try
-                        (.writeFileSync fs wallet-dirp wallet-js)
-                        (let [result {:wallet/name wallet-name
-                                      :wallet/path wallet-path}]
-                          (resolve result))
-                        (catch js/Error e
-                          (let [error (lib.error/from-obj e)]
-                            (reject error))))))
-             (.catch (fn [e]
-                       (let [error (lib.error/from-obj e)]
-                         (reject error))))))))))</pre>
+         (-&gt; (has-wallet?&amp; app-name wallet-name)
+             (lib.promise/then
+              (fn [wallet]
+                (when wallet (reject (lib.error/error (str &quot;wallet &quot; wallet-name &quot; already exists&quot;))))
+                (-&gt; (lib.promise/all [path&amp; wallet&amp;])
+                    (lib.promise/then
+                     (fn [[wallet-dirp wallet-js]]
+                       (-&gt; (.writeFile fs-promises wallet-dirp wallet-js)
+                           (lib.promise/then (fn [_] (resolve {:wallet/name wallet-name})))
+                           (lib.promise/catch (fn [e] (reject (lib.error/from-obj e)))))))
+                    (lib.promise/catch (fn [e] (reject (lib.error/from-obj e)))))))))))))</pre>
 				</td>
 			</tr>
 			<tr>
