deploy: b68dd8681d72d974151cfa7093d50bd142862770

--- a/com.kubelt.spec.http.html
+++ b/com.kubelt.spec.http.html
@@ -74,7 +74,7 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					
+					<p>TODO use spec.network/dotted-quad</p>
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure">(def host
