--- a/index.html
+++ b/index.html
@@ -538,9 +538,6 @@
 								<a href="jwt.cljc.html">jwt.cljc</a>
 							</li>
 							<li>
-								<a href="com.kubelt.lib.multiaddr.html">com.kubelt.lib.multiaddr</a>
-							</li>
-							<li>
 								<a href="octet.cljc.html">octet.cljc</a>
 							</li>
 							<li>
@@ -635,6 +632,9 @@
 							</li>
 							<li>
 								<a href="com.kubelt.spec.jwt.html">com.kubelt.spec.jwt</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.network.html">com.kubelt.spec.network</a>
 							</li>
 							<li>
 								<a href="com.kubelt.spec.quad.html">com.kubelt.spec.quad</a>
