--- a/com.kubelt.lib.config.default.html
+++ b/com.kubelt.lib.config.default.html
@@ -71,10 +71,12 @@
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure">(def ipfs
-  {:ipfs.read/multiaddr &quot;/ip4/127.0.0.1/tcp/5001&quot;
-   :ipfs.read/scheme :http
-   :ipfs.write/multiaddr &quot;/ip4/127.0.0.1/tcp/5001&quot;
-   :ipfs.write/scheme :http})</pre>
+  {:ipfs.read/scheme :http
+   :ipfs.read/host &quot;127.0.0.1&quot;
+   :ipfs.read/port 5001
+   :ipfs.write/scheme :http
+   :ipfs.write/host &quot;127.0.0.1&quot;
+   :ipfs.write/port 5001})</pre>
 				</td>
 			</tr>
 			<tr>
@@ -83,8 +85,9 @@
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure">(def p2p
-  {:p2p/multiaddr &quot;/ip4/127.0.0.1/tcp/8787&quot;
-   :p2p/scheme :http})</pre>
+  {:p2p/scheme :http
+   :p2p/host &quot;127.0.0.1&quot;
+   :p2p/port 8787})</pre>
 				</td>
 			</tr>
 			<tr>
@@ -147,13 +150,16 @@
           :client/http {}
           ;; Our connection to IPFS.
           :client/ipfs {:ipfs/read {:http/scheme (ig/ref :ipfs.read/scheme)
-                                    :ipfs/multiaddr (ig/ref :ipfs.read/multiaddr)}
+                                    :http/host (ig/ref :ipfs.read/host)
+                                    :http/port (ig/ref :ipfs.read/port)}
                         :ipfs/write {:http/scheme (ig/ref :ipfs.write/scheme)
-                                     :ipfs/multiaddr (ig/ref :ipfs.write/multiaddr)}
+                                     :http/host (ig/ref :ipfs.write/host)
+                                     :http/port (ig/ref :ipfs.write/port)}
                         :client/http (ig/ref :client/http)}
           ;; Our connection to the Kubelt p2p system.
           :client/p2p {:http/scheme (ig/ref :p2p/scheme)
-                       :p2p/multiaddr (ig/ref :p2p/multiaddr)}
+                       :http/host (ig/ref :p2p/host)
+                       :http/port (ig/ref :p2p/port)}
           ;; A crypto &quot;vault&quot; that stores session credentials.
           :crypto/session {:jwt/tokens (ig/ref :credential/jwt)}
           ;; A wrapper around the platform wallet functionality.
