--- a/com.kubelt.spec.config.html
+++ b/com.kubelt.spec.config.html
@@ -69,30 +69,6 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					<p>TODO move into com.kubelt.spec.network</p>
-				</td>
-				<td class="codes">
-					<pre class="brush: clojure">#_(def dotted-quad
-  #&quot;^([01]?\\\\d\\\\d?|2[0-4]\\\\d|25[0-5])\\\\.([01]?\\\\d\\\\d?|2[0-4]\\\\d|25[0-5])\\\\.([01]?\\\\d\\\\d?|2[0-4]\\\\d|25[0-5])\\\\.([01]?\\\\d\\\\d?|2[0-4]\\\\d|25[0-5])\$&quot;)
-(def dotted-quad
-  #&quot;(\\\\.|\\\\d)*&quot;)</pre>
-				</td>
-			</tr>
-			<tr>
-				<td class="docs">
-					<p>TODO refine this regex to better match a multiaddr TODO move into com.kubelt.spec.multiaddr</p>
-				</td>
-				<td class="codes">
-					<pre class="brush: clojure">(def multiaddr
-  [:re #?(;; cljs can't generate re values  so providing a default one
-          :cljs {:gen/fmap (fn [_] &quot;/ip4/127.0.0.1/tcp/5001&quot;)}
-          ;; TODO: add test.check dependency, required for clj env
-          :clj {})
-   #&quot;^(/(\\w+)/(\\w+|\\.)+)+\$&quot;])</pre>
-				</td>
-			</tr>
-			<tr>
-				<td class="docs">
 					
 				</td>
 				<td class="codes">
@@ -123,12 +99,15 @@
    [:log/level {:optional true} logging-level]
    [:credential/jwt {:optional true} credentials]
    [:crypto/wallet {:optional true} spec.wallet/wallet]
-   [:ipfs.read/multiaddr {:optional true} multiaddr]
    [:ipfs.read/scheme {:optional true} spec.http/scheme]
-   [:ipfs.write/multiaddr {:optional true} multiaddr]
+   [:ipfs.read/host {:optional true} spec.http/host]
+   [:ipfs.read/port {:optional true} spec.http/port]
    [:ipfs.write/scheme {:optional true} spec.http/scheme]
-   [:p2p/multiaddr {:optional true} multiaddr]
-   [:p2p/scheme {:optional true} spec.http/scheme]])</pre>
+   [:ipfs.write/host {:optional true} spec.http/host]
+   [:ipfs.write/port {:optional true} spec.http/port]
+   [:p2p/scheme {:optional true} spec.http/scheme]
+   [:p2p/host {:optional true} spec.http/host]
+   [:p2p/port {:optional true} spec.http/port]])</pre>
 				</td>
 			</tr>
 			<tr>
